# miniRPC

./: .gitignore  CMakeLists.txt  README.md  build.sh
docker/: dockerfile
example/: CMakeLists.txt  main.cpp  mathservice.cpp  mathservice.h
k8s/: README.md  create_local_image.md  deployment.yaml  services.yaml
source/: CMakeLists.txt  main.cpp
source/common/: base64.cpp  base64.h  errorno.h  log.h  payload.cpp  payload.h  sha1.cpp  sha1.h  utils.h
source/event/: event.h  linux_event.cpp  mac_event.cpp
source/rpc/: rpc_builder.cpp  rpc_builder.h  rpc_service.cpp  rpc_service.h
source/server/: connecter.cpp  connecter.h  rpc_server.cpp  rpc_server.h  server.cpp  server.h
tests/: CMakeLists.txt  main.cpp
tests/event/: event_test.cpp
tests/log/: log_test.cpp
tests/rpc/: rpc_test.cpp
tests/server/: server_test.cpp
